# cpp-sim-lab

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  docs_obstacle_map_approach.md  vcpkg.json
benchmarks/: CMakeLists.txt
benchmarks/cmake/: AddBenchmark.cmake
benchmarks/common/: AdaptiveBenchmark.hpp  BenchTimer.hpp  BenchmarkRandom.hpp  Plotting.py  ProgressBar.hpp
benchmarks/particles_collision/: CMakeLists.txt  main.cpp
benchmarks/particles_collision_compare/: CMakeLists.txt
benchmarks/particles_fixed_grid_compare/: CMakeLists.txt  main.cpp
benchmarks/particles_grid_cell_size/: CMakeLists.txt  main.cpp  plot.py
benchmarks/particles_update/: CMakeLists.txt  main.cpp
benchmarks/simulations/agents_cpu/: CMakeLists.txt
benchmarks/simulations/boids/: CMakeLists.txt
benchmarks/simulations/boids_cpu/: CMakeLists.txt
benchmarks/simulations/bubbles_cpu_gpu/: CMakeLists.txt
benchmarks/simulations/crowd_cpu/: CMakeLists.txt
benchmarks/simulations/epidemic_cpu/: CMakeLists.txt
benchmarks/simulations/particles_cpu/: CMakeLists.txt
benchmarks/simulations/sand_cpu/: CMakeLists.txt
benchmarks/simulations/traffic_flow/: CMakeLists.txt
simulations/: CMakeLists.txt  README.md
simulations/agents_cpu/: CMakeLists.txt  README.md  main.cpp
simulations/agents_cpu/include/: Agent.hpp  AgentIntent.hpp  Obstacle.hpp  Simulation.hpp  SimulationUiTraits.hpp  SteeringBehaviors.hpp
simulations/agents_cpu/src/: Simulation.cpp  SteeringBehaviors.cpp
simulations/boids/: CMakeLists.txt  main.cpp
simulations/boids/include/: Boid.hpp  BoidBehavior.hpp  BoidSteering.hpp  Simulation.hpp  SimulationUiTraits.hpp
simulations/boids/src/: BoidBehavior.cpp  BoidSteering.cpp  Simulation.cpp
simulations/boids_cpu/: CMakeLists.txt  README.md  main.cpp
simulations/boids_cpu/include/: Boid.hpp  BoidBehavior.hpp  BoidSteering.hpp  Simulation.hpp  SimulationUiTraits.hpp  SpatialGrid.hpp
simulations/boids_cpu/src/: BoidBehavior.cpp  BoidSteering.cpp  Simulation.cpp  SpatialGrid.cpp
simulations/bubbles/: CMakeLists.txt  main.cpp
simulations/bubbles/include/: Bubble.hpp  BubblePhysics.hpp  Simulation.hpp  SimulationUiTraits.hpp
simulations/bubbles/src/: BubblePhysics.cpp  Simulation.cpp
simulations/bubbles_cpu/: CMakeLists.txt  main.cpp
simulations/bubbles_cpu/include/: Bubble.hpp  BubblePhysics.hpp  Simulation.hpp  SimulationUiTraits.hpp
simulations/bubbles_cpu/src/: BubblePhysics.cpp  Simulation.cpp
simulations/bubbles_cpu_gpu/: CMakeLists.txt  main.cpp
simulations/bubbles_cpu_gpu/include/: Bubble.hpp  BubblePhysics.hpp  Simulation.hpp  SimulationUiTraits.hpp
simulations/bubbles_cpu_gpu/src/: BubblePhysics.cpp  Simulation.cpp
simulations/common/: SimulationTypes.hpp
simulations/crowd/: CMakeLists.txt  main.cpp
simulations/crowd/include/: Agent.hpp  CrowdBehavior.hpp  Obstacle.hpp  Simulation.hpp  SimulationUiTraits.hpp
simulations/crowd/src/: CrowdBehavior.cpp  Simulation.cpp
simulations/crowd_cpu/: CMakeLists.txt  main.cpp
simulations/crowd_cpu/include/: Agent.hpp  CrowdBehavior.hpp  Obstacle.hpp  Simulation.hpp  SimulationUiTraits.hpp
simulations/crowd_cpu/src/: CrowdBehavior.cpp  Simulation.cpp
simulations/epidemic_cpu/: CMakeLists.txt  main.cpp
simulations/epidemic_cpu/include/: Agent.hpp  Simulation.hpp  SimulationUiTraits.hpp
simulations/epidemic_cpu/src/: Simulation.cpp
simulations/heat_grid/: CMakeLists.txt  main.cpp
simulations/heat_grid/include/: Simulation.hpp  SimulationUiTraits.hpp
simulations/heat_grid/src/: Simulation.cpp
simulations/heat_grid_cpu/: CMakeLists.txt  main.cpp
simulations/heat_grid_cpu/include/: Simulation.hpp  SimulationUiTraits.hpp
simulations/heat_grid_cpu/src/: Simulation.cpp
simulations/heat_grid_cpu_gpu/: CMakeLists.txt  main.cpp
simulations/heat_grid_cpu_gpu/include/: Simulation.hpp  SimulationUiTraits.hpp
simulations/heat_grid_cpu_gpu/src/: Simulation.cpp
simulations/particles/: CMakeLists.txt  main.cpp
simulations/particles/include/: Particle.hpp  ParticlePhysics.hpp  Simulation.hpp  SimulationUiTraits.hpp
simulations/particles/src/: ParticlePhysics.cpp  Simulation.cpp
simulations/particles_cpu/: CMakeLists.txt  ParticlePhysics.cpp  README.md  Simulation.cpp  Simulation.hpp  SpatialGrid.hpp  main.cpp
simulations/particles_cpu/include/: Particle.hpp  ParticlePhysics.hpp  Simulation.hpp  SimulationUiTraits.hpp  SpatialGrid.hpp
simulations/particles_cpu/src/: Simulation.cpp  SpatialGrid.cpp
simulations/predator_prey_cpu/: CMakeLists.txt  main.cpp
simulations/predator_prey_cpu/include/: Boid.hpp  Simulation.hpp  SimulationUiTraits.hpp
simulations/predator_prey_cpu/src/: Simulation.cpp
simulations/sand_cpu/: CMakeLists.txt  main.cpp
simulations/sand_cpu/include/: Cell.hpp  Simulation.hpp  SimulationUiTraits.hpp
simulations/sand_cpu/src/: Simulation.cpp
simulations/traffic_flow/: CMakeLists.txt  main.cpp
simulations/traffic_flow/include/: CrossroadPolicy.hpp  RoadBrush.hpp  RoadTopologyServices.hpp  Simulation.hpp  SimulationUiTraits.hpp  TrafficLifecycle.hpp  TrafficPhysics.hpp  Vehicle.hpp  VehicleBehavior.hpp
simulations/traffic_flow/src/: CrossroadPolicy.cpp  RoadTopologyServices.cpp  Simulation.cpp  TrafficLifecycle.cpp  TrafficPhysics.cpp  VehicleBehavior.cpp
simulations/traffic_flow_cpu/: CMakeLists.txt  main.cpp
simulations/traffic_flow_cpu/include/: CrossroadPolicy.hpp  RoadBrush.hpp  Simulation.hpp  SimulationUiTraits.hpp  TrafficPhysics.hpp  Vehicle.hpp  VehicleBehavior.hpp
simulations/traffic_flow_cpu/src/: CrossroadPolicy.cpp  Simulation.cpp  TrafficPhysics.cpp  VehicleBehavior.cpp
simulations/traffic_flow_cpu_gpu/: CMakeLists.txt  main.cpp
simulations/traffic_flow_cpu_gpu/include/: RoadBrush.hpp  (+6 more)
systems/thread_pool/: CMakeLists.txt
tests/framework/: CMakeLists.txt  collision_pairs_tests.cpp  obstacle_mask_tests.cpp  parallel_update_tests.cpp  simulation_execution_tests.cpp  spatial_query_tests.cpp  stats_reduction_tests.cpp  weighted_behavior_pipeline_tests.cpp
tests/particles_collision/: CMakeLists.txt  main.cpp
(+150 files in other folders)
