add_subdirectory(particles_cpu)
add_subdirectory(boids_cpu)
add_subdirectory(predator_prey_cpu)
add_subdirectory(agents_cpu)
add_subdirectory(bubbles_cpu)
add_subdirectory(crowd_cpu)

add_subdirectory(sand_cpu)
add_subdirectory(traffic_flow_cpu)

add_subdirectory(epidemic_cpu)

add_subdirectory(heat_grid_cpu)
