add_subdirectory(particles)
add_subdirectory(boids)
add_subdirectory(predator_prey_cpu)
add_subdirectory(agents_cpu)
add_subdirectory(bubbles_cpu_gpu)
add_subdirectory(crowd)

add_subdirectory(sand_cpu)
add_subdirectory(traffic_flow_cpu_gpu)

add_subdirectory(epidemic_cpu)

add_subdirectory(heat_grid_cpu_gpu)
